start converting old notes to latex and change hyperlink colour to purple

--- a/preamble.tex
+++ b/preamble.tex
@@ -21,14 +21,14 @@
     \color{white}
     \vspace*{15mm}
 
-    \noindent \Large{Hugh Baldwin}\\
+    \noindent \huge{Hugh Baldwin}\\
     \large{up2157117}\\
 
     \vfill{}
 
-    \noindent \Large{\textbf{#2}}\\
-    \large{#3}\\
-    \large{TB#4}\\
+    \noindent \huge{\textbf{#2}}\\
+    \Large{#3}\\
+    \Large{TB#4}\\
 
     \vfill{}
 
@@ -116,3 +116,7 @@
 \usepackage[dvipsnames]{xcolor}
 
 \definecolor{myPurple}{RGB}{134, 53, 227}
+
+% Setup hyperlink colours
+\usepackage[]{hyperref}
+\hypersetup{linkcolor=myPurple}
