finish converting networks notes, fix fontspec package so maths uses TeX font

--- a/1st-year/m30231-netwk/m30231.tex
+++ b/1st-year/m30231-netwk/m30231.tex
@@ -22,5 +22,20 @@
 \input{sessions/25-10-22.tex}
 \input{sessions/09-11-22.tex}
 \input{sessions/15-11-22.tex}
+\input{sessions/16-11-22.tex}
+\input{sessions/22-11-22.tex}
+\input{sessions/23-11-22.tex}
+\input{sessions/29-11-22.tex}
+\input{sessions/30-11-22.tex}
+\input{sessions/06-12-22.tex}
+\input{sessions/07-12-22.tex}
+\input{sessions/31-01-23.tex}
+\input{sessions/07-02-23.tex}
+\input{sessions/14-02-23.tex}
+\input{sessions/21-02-23.tex}
+\input{sessions/28-02-23.tex}
+\input{sessions/14-03-23.tex}
+\input{sessions/21-03-23.tex}
+\input{sessions/28-03-23.tex}
 
 \end{document}
