--- a/preamble.tex
+++ b/preamble.tex
@@ -9,7 +9,7 @@
 }
 
 % Set fonts
-\usepackage{fontspec}
+\usepackage[no-math]{fontspec}
 
 \setmainfont[Ligatures=TeX]{IBM Plex Sans}
 \setsansfont[Ligatures=TeX]{IBM Plex Sans}
@@ -126,7 +126,7 @@
 }
 
 \newcommand{\practical}[4]{
-  \session{#1}{#2}{#3}{#4}{Practical Session}
+  \session{#1}{#2}{#3}{#4}{Practical}
 }
 
 % Use the xcolor package, and add my custom purple
