fix module template to hide links on table of contents

--- a/2nd-year/m21270-dsalg/m21270.tex
+++ b/2nd-year/m21270-dsalg/m21270.tex
@@ -8,7 +8,11 @@
 % Year Module-Name Module-Code Teaching-Block(s)
 \coverpage{2nd}{Data Structures and Algorithms}{M21270}{1}
 
-\tableofcontents
+% Hide links specifically on the ToC
+{
+  \hypersetup{hidelinks}
+  \tableofcontents
+}
 
 % \input for each session's notes
 % e.g. \input{sessions/27-06-23.tex}
