--- a/1st-year/m30231-netwk/m30231.tex
+++ b/1st-year/m30231-netwk/m30231.tex
@@ -8,6 +8,7 @@
 % Year Module-Name Module-Code Teaching-Block(s)
 \coverpage{1st}{Networks}{M30231}{1\&2}
 
+% Hide links specifically on the ToC
 {
   \hypersetup{hidelinks}
   \tableofcontents
