--- a/2nd-year/m21274-dmafp/m21274.tex
+++ b/2nd-year/m21274-dmafp/m21274.tex
@@ -8,7 +8,11 @@
 % Year Module-Name Module-Code Teaching-Block(s)
 \coverpage{2nd}{Discreet Mathematics and Functional Programming}{M21274}{2}
 
-\tableofcontents
+% Hide links specifically on the ToC
+{
+  \hypersetup{hidelinks}
+  \tableofcontents
+}
 
 % \input for each session's notes
 % e.g. \input{sessions/27-06-23.tex}
