--- a/2nd-year/m30233-osint/m30233.tex
+++ b/2nd-year/m30233-osint/m30233.tex
@@ -8,7 +8,11 @@
 % Year Module-Name Module-Code Teaching-Block(s)
 \coverpage{2nd}{Operating Systems and Internetworking}{M30233}{1}
 
-\tableofcontents
+% Hide links specifically on the ToC
+{
+  \hypersetup{hidelinks}
+  \tableofcontents
+}
 
 % \input for each session's notes
 % e.g. \input{sessions/27-06-23.tex}
