--- a/templates/module-template/main.tex
+++ b/templates/module-template/main.tex
@@ -8,7 +8,11 @@
 % Year Module-Name Module-Code Teaching-Block(s)
 \coverpage{1st}{Template Module}{M12345}{1\&2}
 
-\tableofcontents
+% Hide links specifically on the ToC
+{
+  \hypersetup{hidelinks}
+  \tableofcontents
+}
 
 % \input for each session's notes
 \input{sessions/27-06-23.tex}
