add lectures from this week; add prereading session type

--- a/2nd-year/m21274-dmafp/m21274.tex
+++ b/2nd-year/m21274-dmafp/m21274.tex
@@ -1,12 +1,12 @@
 \documentclass[a4paper, 11pt]{report}
 
 \input{../../preamble.tex}
-\setupdocument{M21274}{Discreet Mathematics and Functional Programming}
+\setupdocument{M21274}{Discrete Mathematics and Functional Programming}
 
 \begin{document}
 
 % Year Module-Name Module-Code Teaching-Block(s)
-\coverpage{2nd}{Discreet Mathematics and Functional Programming}{M21274}{2}
+\coverpage{2nd}{Discrete Mathematics and Functional Programming}{M21274}{2}
 
 % Hide links specifically on the ToC
 {
