--- a/2nd-year/m30233-osint/m30233.tex
+++ b/2nd-year/m30233-osint/m30233.tex
@@ -3,6 +3,9 @@
 \input{../../preamble.tex}
 \setupdocument{M30233}{Operating Systems and Internetworking}
 
+\usepackage{graphicx}
+\graphicspath{ {./resources/} }
+
 \begin{document}
 
 % Year Module-Name Module-Code Teaching-Block(s)
@@ -16,5 +19,13 @@
 
 % \input for each session's notes
 % e.g. \input{sessions/27-06-23.tex}
+
+\part{Operating Systems}
+
+\input{sessions/26-09-23.tex}
+
+\part{Internetworking}
+
+\input{sessions/25-09-23.tex}
 
 \end{document}
