add notes from this week; start os cheatsheet

--- a/2nd-year/m21270-dsalg/m21270.tex
+++ b/2nd-year/m21270-dsalg/m21270.tex
@@ -14,6 +14,13 @@
   \tableofcontents
 }
 
+\pagebreak
+
+\begin{itemize}
+  \item Mid-Unit assessment (30\%) on 8th November
+  \item Exam (70\%) in main assessment period
+\end{itemize}
+
 % \input for each session's notes
 % e.g. \input{sessions/27-06-23.tex}
 
