osint lectures in tex

--- a/2nd-year/m30233-osint/m30233.tex
+++ b/2nd-year/m30233-osint/m30233.tex
@@ -24,9 +24,11 @@
 
 \input{sessions/os-cheatsheet.tex}
 \input{sessions/26-09-23.tex}
+\input{sessions/03-10-23.tex}
 
 \part{Internetworking}
 
 \input{sessions/25-09-23.tex}
+\input{sessions/02-10-23.tex}
 
 \end{document}
