finish previous os lecture; convert os lecture

--- a/2nd-year/m30233-osint/m30233.tex
+++ b/2nd-year/m30233-osint/m30233.tex
@@ -25,6 +25,7 @@
 \input{sessions/os-cheatsheet.tex}
 \input{sessions/26-09-23.tex}
 \input{sessions/03-10-23.tex}
+\input{sessions/10-10-23.tex}
 
 \part{Internetworking}
 
