--- a/2nd-year/m30233-osint/m30233.tex
+++ b/2nd-year/m30233-osint/m30233.tex
@@ -27,11 +27,13 @@
 \input{sessions/03-10-23.tex}
 \input{sessions/10-10-23.tex}
 \input{sessions/17-10-23.tex}
+\input{sessions/31-10-23.tex}
 
 \part{Internetworking}
 
 \input{sessions/25-09-23.tex}
 \input{sessions/02-10-23.tex}
 \input{sessions/16-10-23.tex}
+\input{sessions/30-10-23.tex}
 
 \end{document}
