--- a/2nd-year/m21270-dsalg/m21270.tex
+++ b/2nd-year/m21270-dsalg/m21270.tex
@@ -28,5 +28,6 @@
 \input{sessions/async-2.tex}
 \input{sessions/async-3.tex}
 \input{sessions/async-4.tex}
+\input{sessions/async-5.tex}
 
 \end{document}
