add dsalg async 6

--- a/2nd-year/m21270-dsalg/m21270.tex
+++ b/2nd-year/m21270-dsalg/m21270.tex
@@ -29,5 +29,6 @@
 \input{sessions/async-3.tex}
 \input{sessions/async-4.tex}
 \input{sessions/async-5.tex}
+\input{sessions/async-6.tex}
 
 \end{document}
