add int lecture

--- a/2nd-year/m30233-osint/m30233.tex
+++ b/2nd-year/m30233-osint/m30233.tex
@@ -35,5 +35,6 @@
 \input{sessions/02-10-23.tex}
 \input{sessions/16-10-23.tex}
 \input{sessions/30-10-23.tex}
+\input{sessions/06-11-23.tex}
 
 \end{document}
