finish osint lectures from past weeks

--- a/2nd-year/m30233-osint/m30233.tex
+++ b/2nd-year/m30233-osint/m30233.tex
@@ -28,6 +28,8 @@
 \input{sessions/10-10-23.tex}
 \input{sessions/17-10-23.tex}
 \input{sessions/31-10-23.tex}
+\input{sessions/07-11-23.tex}
+\input{sessions/14-11-23.tex}
 
 \part{Internetworking}
 
@@ -36,5 +38,6 @@
 \input{sessions/16-10-23.tex}
 \input{sessions/30-10-23.tex}
 \input{sessions/06-11-23.tex}
+\input{sessions/13-11-23.tex}
 
 \end{document}
