finally convert dsalg notes to tex; add dsalg async 10 rewrite

--- a/2nd-year/m21270-dsalg/m21270.tex
+++ b/2nd-year/m21270-dsalg/m21270.tex
@@ -18,7 +18,7 @@
 
 \begin{itemize}
   \item Mid-Unit assessment (30\%) on 8th November
-  \item Exam (70\%) in main assessment period
+  \item Exam (70\%) in TB1 assessment period
 \end{itemize}
 
 % \input for each session's notes
@@ -30,5 +30,9 @@
 \input{sessions/async-4.tex}
 \input{sessions/async-5.tex}
 \input{sessions/async-6.tex}
+\input{sessions/async-7.tex}
+\input{sessions/async-8.tex}
+\input{sessions/async-9.tex}
+\input{sessions/async-10.tex}
 
 \end{document}
