add lectures as md from 24-01

--- a/2nd-year/m21274-dmafp/m21274.tex
+++ b/2nd-year/m21274-dmafp/m21274.tex
@@ -17,4 +17,12 @@
 % \input for each session's notes
 % e.g. \input{sessions/27-06-23.tex}
 
+\part{Discreet Mathematics}
+
+
+
+\part{Functional Programming}
+
+
+
 \end{document}
