add dm lecture from 24-01-23

--- a/2nd-year/m21274-dmafp/m21274.tex
+++ b/2nd-year/m21274-dmafp/m21274.tex
@@ -17,9 +17,9 @@
 % \input for each session's notes
 % e.g. \input{sessions/27-06-23.tex}
 
-\part{Discreet Mathematics}
+\part{Discrete Mathematics}
 
-
+\input{sessions/24-01-23.tex}
 
 \part{Functional Programming}
 
