--- a/preamble.tex
+++ b/preamble.tex
@@ -140,3 +140,7 @@
 
 % Use the amsmath package so normal text can be used within math blocks
 \usepackage{amsmath}
+
+% Use the amsfonts package for blackboard bold fonts
+\usepackage{amsfonts}
+\usepackage{amssymb}
