add paapl lecture

--- a/2nd-year/m30235-paapl/m30235.tex
+++ b/2nd-year/m30235-paapl/m30235.tex
@@ -20,5 +20,6 @@
 \input{sessions/24-01-22.tex}
 \input{sessions/24-01-26.tex}
 \input{sessions/24-02-02.tex}
+\input{sessions/24-02-05.tex}
 
 \end{document}
