add paapl lecture; include tikz; add sections to paapl

--- a/2nd-year/m30235-paapl/m30235.tex
+++ b/2nd-year/m30235-paapl/m30235.tex
@@ -17,9 +17,17 @@
 % \input for each session's notes
 % e.g. \input{sessions/27-06-23.tex}
 
-\input{sessions/24-01-22.tex}
+\part{Teaching Block I}
+
+The first teaching block is 100\% coursework, which makes up 50\% of the overall grade. While there are lectures, they
+ are informal, mostly teaching the basic concepts of Flutter, which is very practical, and so notes will not be made
+ here.
+
+\part{Teaching Block II}
+
 \input{sessions/24-01-26.tex}
 \input{sessions/24-02-02.tex}
 \input{sessions/24-02-05.tex}
+\input{sessions/24-02-09.tex}
 
 \end{document}
