--- a/preamble.tex
+++ b/preamble.tex
@@ -145,3 +145,6 @@
 \setsansfont[Ligatures=TeX]{IBM Plex Sans}
 \setmonofont[Ligatures=TeX]{IBM Plex Mono}
 \setmathfont(Digits,Latin){IBM Plex Math}
+
+% Use the tikz package for diagrams
+\usepackage{tikz}
