--- a/2nd-year/m21274-dmafp/m21274.tex
+++ b/2nd-year/m21274-dmafp/m21274.tex
@@ -28,5 +28,6 @@
 \input{sessions/24-01-22.tex}
 \input{sessions/24-01-29.tex}
 \input{sessions/24-02-05.tex}
+\input{sessions/24-02-12.tex}
 
 \end{document}
