--- a/2nd-year/m21274-dmafp/m21274.tex
+++ b/2nd-year/m21274-dmafp/m21274.tex
@@ -22,6 +22,7 @@
 \input{sessions/24-01-23.tex}
 \input{sessions/24-01-30.tex}
 \input{sessions/24-02-06.tex}
+\input{sessions/24-02-13.tex}
 
 \part{Functional Programming}
 
