add paapl lecture

--- a/2nd-year/m30235-paapl/m30235.tex
+++ b/2nd-year/m30235-paapl/m30235.tex
@@ -29,5 +29,6 @@ The first teaching block is 100\% coursework, which makes up 50\% of the overall
 \input{sessions/24-02-02.tex}
 \input{sessions/24-02-05.tex}
 \input{sessions/24-02-09.tex}
+\input{sessions/24-02-16.tex}
 
 \end{document}
