fp lecture; fix math font; update paapl pdf

--- a/2nd-year/m21274-dmafp/m21274.tex
+++ b/2nd-year/m21274-dmafp/m21274.tex
@@ -30,5 +30,6 @@
 \input{sessions/24-01-29.tex}
 \input{sessions/24-02-05.tex}
 \input{sessions/24-02-12.tex}
+\input{sessions/24-02-19.tex}
 
 \end{document}
