--- a/preamble.tex
+++ b/preamble.tex
@@ -144,7 +144,7 @@
 \setmainfont[Ligatures=TeX]{IBM Plex Sans}
 \setsansfont[Ligatures=TeX]{IBM Plex Sans}
 \setmonofont[Ligatures=TeX]{IBM Plex Mono}
-\setmathfont(Digits,Latin){IBM Plex Math}
+\setmathfont(Digits,Latin){IBM Plex Math Beta 240212}
 
 % Use the tikz package for diagrams
 \usepackage{tikz}
