--- a/2nd-year/m30235-paapl/m30235.tex
+++ b/2nd-year/m30235-paapl/m30235.tex
@@ -6,7 +6,7 @@
 \begin{document}
 
 % Year Module-Name Module-Code Teaching-Block(s)
-\coverpage{2nd}{Programming Applications and Programming Languages}{M30235}{1\&2}
+\coverpage{2nd}{Programming Applications\\and Programming Languages}{M30235}{1\&2}
 
 % Hide links specifically on the ToC
 {
