--- a/2nd-year/m21274-dmafp/m21274.tex
+++ b/2nd-year/m21274-dmafp/m21274.tex
@@ -23,6 +23,7 @@
 \input{sessions/24-01-30.tex}
 \input{sessions/24-02-06.tex}
 \input{sessions/24-02-13.tex}
+\input{sessions/24-02-20.tex}
 
 \part{Functional Programming}
 
