--- a/2nd-year/m30235-paapl/m30235.tex
+++ b/2nd-year/m30235-paapl/m30235.tex
@@ -31,5 +31,6 @@ The first teaching block is 100\% coursework, which makes up 50\% of the overall
 \input{sessions/24-02-09.tex}
 \input{sessions/24-02-16.tex}
 \input{sessions/24-02-19.tex}
+\input{sessions/24-02-23.tex}
 
 \end{document}
