--- a/2nd-year/m21274-dmafp/m21274.tex
+++ b/2nd-year/m21274-dmafp/m21274.tex
@@ -32,5 +32,6 @@
 \input{sessions/24-02-05.tex}
 \input{sessions/24-02-12.tex}
 \input{sessions/24-02-19.tex}
+\input{sessions/24-02-26.tex}
 
 \end{document}
