add dm lecture notes; fix previous week :)

--- a/2nd-year/m21274-dmafp/m21274.tex
+++ b/2nd-year/m21274-dmafp/m21274.tex
@@ -3,6 +3,8 @@
 \input{../../preamble.tex}
 \setupdocument{M21274}{Discrete Mathematics and Functional Programming}
 
+\newtheorem{theorem}{Theorem}
+
 \begin{document}
 
 % Year Module-Name Module-Code Teaching-Block(s)
@@ -24,6 +26,7 @@
 \input{sessions/24-02-06.tex}
 \input{sessions/24-02-13.tex}
 \input{sessions/24-02-20.tex}
+\input{sessions/24-02-27.tex}
 
 \part{Functional Programming}
 
