--- a/preamble.tex
+++ b/preamble.tex
@@ -148,3 +148,7 @@
 
 % Use the tikz package for diagrams
 \usepackage{tikz}
+
+% Use the amsthm package for mathematical proofs
+\usepackage{amsthm}
+\renewcommand\qedsymbol{QED.}
