change title page; recompile everything

--- a/2nd-year/m21270-dsalg/m21270.tex
+++ b/2nd-year/m21270-dsalg/m21270.tex
@@ -6,7 +6,7 @@
 \begin{document}
 
 % Year Module-Name Module-Code Teaching-Block(s)
-\coverpage{2nd}{Data Structures and Algorithms}{M21270}{1}
+\coverpage{Second}{Data Structures and Algorithms}{M21270}{1}
 
 % Hide links specifically on the ToC
 {
