--- a/2nd-year/m30239-ehack/m30239.tex
+++ b/2nd-year/m30239-ehack/m30239.tex
@@ -6,7 +6,7 @@
 \begin{document}
 
 % Year Module-Name Module-Code Teaching-Block(s)
-\coverpage{2nd}{Ethical Hacking}{M30239}{2}
+\coverpage{Second}{Ethical Hacking}{M30239}{2}
 
 % Hide links specifically on the ToC
 {
