--- a/2nd-year/m30819-setap/m30819.tex
+++ b/2nd-year/m30819-setap/m30819.tex
@@ -6,7 +6,7 @@
 \begin{document}
 
 % Year Module-Name Module-Code Teaching-Block(s)
-\coverpage{2nd}{Software Engineering Theory and Practice}{M30819}{1\&2}
+\coverpage{Second}{Software Engineering\\Theory and Practice}{M30819}{1\&2}
 
 % Hide links specifically on the ToC
 {
