--- a/preamble.tex
+++ b/preamble.tex
@@ -13,26 +13,26 @@
   \begin{titlepage}
     \pagecolor{myPurple}
     \color{white}
-    \vspace*{15mm}
+    \vspace*{35mm}
 
-    \noindent \huge{Hugh Baldwin}\\
-    \large{up2157117}\\
-
-    \vfill{}
-
-    \noindent \huge{\textbf{#2}}\\
-    \Large{#3}\\
-    \Large{TB#4}\\
+    \noindent \Huge{BSc (Hons) Computer Science}\\[1mm]
+    \Large{University of Portsmouth}\\
+    \Large{#1 Year}
 
     \vfill{}
 
-    { \linespread{1}
-    \noindent \Large{University of Portsmouth}\\
-    \Huge{BSc Computer Science}\\
-    \Large{#1 Year}\\
-    }
+    \begin{flushright}
+      \noindent \Huge{\textbf{#2}}\\[2mm]
+      \Large{#3}\\
+      \Large{Semester #4}
+    \end{flushright}
 
-    \vspace*{15mm}
+    \vfill{}
+
+    \noindent \Huge{Hugh Baldwin}\\[1mm]
+    \Large{up2157117@myport.ac.uk}
+
+    \vspace*{35mm}
   \end{titlepage}
   \nopagecolor{}
 }
