--- a/1st-year/m30231-netwk/m30231.tex
+++ b/1st-year/m30231-netwk/m30231.tex
@@ -6,7 +6,7 @@
 \begin{document}
 
 % Year Module-Name Module-Code Teaching-Block(s)
-\coverpage{1st}{Networks}{M30231}{1\&2}
+\coverpage{First}{Networks}{M30231}{1\&2}
 
 % Hide links specifically on the ToC
 {
