--- a/2nd-year/m21274-dmafp/m21274.tex
+++ b/2nd-year/m21274-dmafp/m21274.tex
@@ -8,7 +8,7 @@
 \begin{document}
 
 % Year Module-Name Module-Code Teaching-Block(s)
-\coverpage{2nd}{Discrete Mathematics and Functional Programming}{M21274}{2}
+\coverpage{Second}{Discrete Mathematics and\\Functional Programming}{M21274}{2}
 
 % Hide links specifically on the ToC
 {
