--- a/2nd-year/m30233-osint/m30233.tex
+++ b/2nd-year/m30233-osint/m30233.tex
@@ -9,7 +9,7 @@
 \begin{document}
 
 % Year Module-Name Module-Code Teaching-Block(s)
-\coverpage{2nd}{Operating Systems and Internetworking}{M30233}{1}
+\coverpage{Second}{Operating Systems\\and Internetworking}{M30233}{1}
 
 % Hide links specifically on the ToC
 {
