--- a/2nd-year/m21274-dmafp/m21274.tex
+++ b/2nd-year/m21274-dmafp/m21274.tex
@@ -36,5 +36,6 @@
 \input{sessions/24-02-12.tex}
 \input{sessions/24-02-19.tex}
 \input{sessions/24-02-26.tex}
+\input{sessions/24-03-11.tex}
 
 \end{document}
