add incomplete dm lecture; examples to be finished

--- a/2nd-year/m21274-dmafp/m21274.tex
+++ b/2nd-year/m21274-dmafp/m21274.tex
@@ -27,6 +27,7 @@
 \input{sessions/24-02-13.tex}
 \input{sessions/24-02-20.tex}
 \input{sessions/24-02-27.tex}
+\input{sessions/24-03-12.tex}
 
 \part{Functional Programming}
 
