--- a/preamble.tex
+++ b/preamble.tex
@@ -152,3 +152,6 @@
 % Use the amsthm package for mathematical proofs
 \usepackage{amsthm}
 \renewcommand\qedsymbol{QED.}
+
+% Use the float package for nicer graphs
+\usepackage{float}
