add paapl lecture

--- a/2nd-year/m30235-paapl/m30235.tex
+++ b/2nd-year/m30235-paapl/m30235.tex
@@ -34,5 +34,6 @@ The first teaching block is 100\% coursework, which makes up 50\% of the overall
 \input{sessions/24-02-23.tex}
 \input{sessions/24-03-01.tex}
 \input{sessions/24-03-11.tex}
+\input{sessions/24-03-15.tex}
 
 \end{document}
