--- a/2nd-year/m21274-dmafp/m21274.tex
+++ b/2nd-year/m21274-dmafp/m21274.tex
@@ -38,5 +38,6 @@
 \input{sessions/24-02-19.tex}
 \input{sessions/24-02-26.tex}
 \input{sessions/24-03-11.tex}
+\input{sessions/24-03-18.tex}
 
 \end{document}
