add dm lecture; fix previous lecture

--- a/2nd-year/m21274-dmafp/m21274.tex
+++ b/2nd-year/m21274-dmafp/m21274.tex
@@ -28,6 +28,7 @@
 \input{sessions/24-02-20.tex}
 \input{sessions/24-02-27.tex}
 \input{sessions/24-03-12.tex}
+\input{sessions/24-03-19.tex}
 
 \part{Functional Programming}
 
