--- a/2nd-year/m21274-dmafp/m21274.tex
+++ b/2nd-year/m21274-dmafp/m21274.tex
@@ -41,5 +41,6 @@
 \input{sessions/24-02-26.tex}
 \input{sessions/24-03-11.tex}
 \input{sessions/24-03-18.tex}
+\input{sessions/24-04-22.tex}
 
 \end{document}
