--- a/2nd-year/m21274-dmafp/m21274.tex
+++ b/2nd-year/m21274-dmafp/m21274.tex
@@ -30,6 +30,7 @@
 \input{sessions/24-03-12.tex}
 \input{sessions/24-03-19.tex}
 \input{sessions/24-04-16.tex}
+\input{sessions/24-04-23.tex}
 
 \part{Functional Programming}
 
