finish dm lecture; add dm lecture

--- a/2nd-year/m21274-dmafp/m21274.tex
+++ b/2nd-year/m21274-dmafp/m21274.tex
@@ -5,6 +5,9 @@
 
 \newtheorem{theorem}{Theorem}
 
+% Use the parskip package for better paragraph spacing after diagrams
+\usepackage[skip=7pt]{parskip}
+
 \begin{document}
 
 % Year Module-Name Module-Code Teaching-Block(s)
@@ -31,6 +34,7 @@
 \input{sessions/24-03-19.tex}
 \input{sessions/24-04-16.tex}
 \input{sessions/24-04-23.tex}
+\input{sessions/24-04-30.tex}
 
 \part{Functional Programming}
 
