update preamble; recompile all documents

--- a/preamble.tex
+++ b/preamble.tex
@@ -30,7 +30,7 @@
     \vfill{}
 
     \noindent \Huge{Hugh Baldwin}\\[1mm]
-    \Large{up2157117@myport.ac.uk}
+    \Large{hugh.baldwin@myport.ac.uk}
 
     \vspace*{35mm}
   \end{titlepage}
@@ -148,6 +148,7 @@
 
 % Use the tikz package for diagrams
 \usepackage{tikz}
+\usetikzlibrary{arrows}
 
 \tikzset{
   vertex/.style={circle,thick,draw,inner sep=0pt,minimum size=6.5mm}
