begin paapl lecture

--- a/2nd-year/m30235-paapl/m30235.tex
+++ b/2nd-year/m30235-paapl/m30235.tex
@@ -39,5 +39,6 @@ The first teaching block is 100\% coursework, which makes up 50\% of the overall
 \input{sessions/24-04-15.tex}
 \input{sessions/24-04-19.tex}
 \input{sessions/24-04-26.tex}
+\input{sessions/24-04-29.tex}
 
 \end{document}
