add third year modules; change accent colour; update website to use new template; recompile all modules

--- a/preamble.tex
+++ b/preamble.tex
@@ -129,7 +129,8 @@
 % Use the xcolor package, and add my custom purple
 \usepackage[dvipsnames]{xcolor}
 
-\definecolor{myPurple}{RGB}{134, 53, 227}
+% \definecolor{myPurple}{RGB}{134, 53, 227} % Old purple
+\definecolor{myPurple}{RGB}{112, 41, 99} % New purple
 
 % Use the amsmath package so normal text can be used within math blocks
 \usepackage{amsmath}
