switch to release version of ibm plex math

--- a/preamble.tex
+++ b/preamble.tex
@@ -145,7 +145,7 @@
 \setmainfont[Ligatures=TeX]{IBM Plex Sans}
 \setsansfont[Ligatures=TeX]{IBM Plex Sans}
 \setmonofont[Ligatures=TeX]{IBM Plex Mono}
-\setmathfont(Digits,Latin){IBM Plex Math Beta 240212}
+\setmathfont(Digits,Latin){IBM Plex Math}
 
 % Use the tikz package for diagrams
 \usepackage{tikz}
