add seminar session type; add adnet seminar

--- a/preamble.tex
+++ b/preamble.tex
@@ -125,6 +125,10 @@
   \session{#1}{}{}{}{Prereading}
 }
 
+\newcommand{\seminar}[4]{
+  \session{#1}{#2}{#3}{#4}{Seminar}
+}
+
 % Use the xcolor package, and add my custom purple
 \usepackage[dvipsnames]{xcolor}
 
