add second theocs lecture; fix math rendering

--- a/preamble.tex
+++ b/preamble.tex
@@ -164,7 +164,7 @@
 \setmainfont[Ligatures=TeX]{IBM Plex Sans}
 \setsansfont[Ligatures=TeX]{IBM Plex Sans}
 \setmonofont[Ligatures=TeX]{IBM Plex Mono}
-\setmathfont(Digits,Latin){IBM Plex Math}
+\setmathfont{IBM Plex Math}
 
 % Use the tikz package for diagrams
 \usepackage{tikz}
