add adnet seminar

--- a/3rd-year/m21279-adnet/m21279.tex
+++ b/3rd-year/m21279-adnet/m21279.tex
@@ -23,5 +23,6 @@
 \input{sessions/2024-09-30.tex}
 \input{sessions/2024-10-03.tex}
 \input{sessions/2024-10-07.tex}
+\input{sessions/2024-10-10.tex}
 
 \end{document}
