start theocs lecture

--- a/3rd-year/m21276-theoc/m21276.tex
+++ b/3rd-year/m21276-theoc/m21276.tex
@@ -8,6 +8,8 @@
 
 \begin{document}
 
+\usetikzlibrary{automata, positioning, arrows}
+
 % Year Module-Name Module-Code Teaching-Block(s)
 \coverpage{Third}{Theoretical Computer Science}{M21276}{1}
 
@@ -22,5 +24,6 @@
 
 \input{sessions/2024-09-25.tex}
 \input{sessions/2024-10-03.tex}
+\input{sessions/2024-10-10.tex}
 
 \end{document}
