add adnet lecture

--- a/3rd-year/m21279-adnet/m21279.tex
+++ b/3rd-year/m21279-adnet/m21279.tex
@@ -24,5 +24,6 @@
 \input{sessions/2024-10-03.tex}
 \input{sessions/2024-10-07.tex}
 \input{sessions/2024-10-10.tex}
+\input{sessions/2024-10-14.tex}
 
 \end{document}
