start theocs lecture

--- a/3rd-year/m21276-theoc/m21276.tex
+++ b/3rd-year/m21276-theoc/m21276.tex
@@ -25,5 +25,6 @@
 \input{sessions/2024-09-25.tex}
 \input{sessions/2024-10-03.tex}
 \input{sessions/2024-10-10.tex}
+\input{sessions/2024-10-17.tex}
 
 \end{document}
