start theocs lecture

--- a/3rd-year/m21276-theoc/m21276.tex
+++ b/3rd-year/m21276-theoc/m21276.tex
@@ -26,5 +26,6 @@
 \input{sessions/2024-10-03.tex}
 \input{sessions/2024-10-10.tex}
 \input{sessions/2024-10-17.tex}
+\input{sessions/2024-10-24.tex}
 
 \end{document}
