add first half of theocs lecture

--- a/3rd-year/m21276-theoc/m21276.tex
+++ b/3rd-year/m21276-theoc/m21276.tex
@@ -27,5 +27,6 @@
 \input{sessions/2024-10-10.tex}
 \input{sessions/2024-10-17.tex}
 \input{sessions/2024-10-24.tex}
+\input{sessions/2024-11-07.tex}
 
 \end{document}
