add most of adnet lecture

--- a/3rd-year/m21279-adnet/m21279.tex
+++ b/3rd-year/m21279-adnet/m21279.tex
@@ -26,5 +26,6 @@
 \input{sessions/2024-10-10.tex}
 \input{sessions/2024-10-14.tex}
 \input{sessions/2024-11-04.tex}
+\input{sessions/2024-11-11.tex}
 
 \end{document}
