--- a/3rd-year/m21276-theoc/m21276.tex
+++ b/3rd-year/m21276-theoc/m21276.tex
@@ -28,5 +28,6 @@
 \input{sessions/2024-10-17.tex}
 \input{sessions/2024-10-24.tex}
 \input{sessions/2024-11-07.tex}
+\input{sessions/2024-11-14.tex}
 
 \end{document}
