--- a/3rd-year/m21279-adnet/m21279.tex
+++ b/3rd-year/m21279-adnet/m21279.tex
@@ -27,5 +27,6 @@
 \input{sessions/2024-10-14.tex}
 \input{sessions/2024-11-04.tex}
 \input{sessions/2024-11-11.tex}
+\input{sessions/2024-11-18.tex}
 
 \end{document}
