add adnet lecture

--- a/3rd-year/m21279-adnet/m21279.tex
+++ b/3rd-year/m21279-adnet/m21279.tex
@@ -29,5 +29,6 @@
 \input{sessions/2024-11-11.tex}
 \input{sessions/2024-11-18.tex}
 \input{sessions/2024-11-25.tex}
+\input{sessions/2024-12-02.tex}
 
 \end{document}
