--- a/3rd-year/m21276-theoc/m21276.tex
+++ b/3rd-year/m21276-theoc/m21276.tex
@@ -33,5 +33,6 @@
 \input{sessions/2024-11-21.tex}
 \input{sessions/2024-11-28.tex}
 \input{sessions/2024-12-05.tex}
+\input{sessions/2024-12-12.tex}
 
 \end{document}
