finish theocs lecture

--- a/3rd-year/m21276-theoc/m21276.tex
+++ b/3rd-year/m21276-theoc/m21276.tex
@@ -22,6 +22,8 @@
 % \input for each session's notes
 % e.g. \input{sessions/27-06-23.tex}
 
+\part{Part A}
+
 \input{sessions/2024-09-25.tex}
 \input{sessions/2024-10-03.tex}
 \input{sessions/2024-10-10.tex}
@@ -29,6 +31,8 @@
 \input{sessions/2024-10-24.tex}
 \input{sessions/2024-11-07.tex}
 \input{sessions/2024-11-14.tex}
+
+\part{Part B}
 
 \input{sessions/2024-11-21.tex}
 \input{sessions/2024-11-28.tex}
