add final theocs lecture

--- a/3rd-year/m21276-theoc/m21276.tex
+++ b/3rd-year/m21276-theoc/m21276.tex
@@ -38,5 +38,6 @@
 \input{sessions/2024-11-28.tex}
 \input{sessions/2024-12-05.tex}
 \input{sessions/2024-12-12.tex}
+\input{sessions/2024-12-19.tex}
 
 \end{document}
