--- a/3rd-year/m30225-disas/m30225.tex
+++ b/3rd-year/m30225-disas/m30225.tex
@@ -22,6 +22,7 @@
 
 \input{sessions/2025-01-27.tex}
 \input{sessions/2025-02-03.tex}
+\input{sessions/2025-02-10.tex}
 \input{sessions/2025-02-17.tex}
 \input{sessions/2025-02-24.tex}
 \input{sessions/2025-03-03.tex}
