seperate into parts; add/update remaining lectures

--- a/3rd-year/m30225-disas/m30225.tex
+++ b/3rd-year/m30225-disas/m30225.tex
@@ -20,6 +20,8 @@
 % \input for each session's notes
 % e.g. \input{sessions/27-06-23.tex}
 
+\part{Distributed Systems}
+
 \input{sessions/2025-01-27.tex}
 \input{sessions/2025-02-03.tex}
 \input{sessions/2025-02-10.tex}
@@ -27,5 +29,7 @@
 \input{sessions/2025-02-24.tex}
 \input{sessions/2025-03-03.tex}
 \input{sessions/2025-03-17.tex}
+
+\part{Security}
 
 \end{document}
